# bevy-navigation-ldtk

./: Cargo.toml  Makefile  README.md  implementation_plan.md  refactor_plan.md
assets/: proj.ldtk
src/: agent.rs  animation.rs  background.rs  brain.rs  constants.rs  consume.rs  events.rs  interaction.rs  interaction_queue.rs  log.rs  main.rs  message_animation.rs  pathfinder.rs  roof.rs  spatial_idx.rs  walk.rs  world.rs
src/brain/: cleanup.rs  components.rs  events.rs  interrupt.rs  mod.rs  plugin.rs  relax.rs  scorers.rs
src/walk/: components.rs  events.rs  get_close.rs  mod.rs  plugin.rs  walk.rs
src/world/: components.rs  grid.rs  mod.rs  plugin.rs  spatial_idx.rs  systems.rs
