[package]
name = "navigation"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.2"
rand = "0.8"
bevy_ecs_ldtk = "0.13.0"
bevy_ecs_tilemap = "0.17.0"
bitflags = "2.5.0"
crossbeam-channel = "0.5.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
ehttp = "0.6.0"
